bugfix: long subjects and messages are not overflowing over the html

--- a/src/main/webapp/src/app/main/chat/chat.component.scss
+++ b/src/main/webapp/src/app/main/chat/chat.component.scss
@@ -2,9 +2,12 @@
 
 .title-container {
   display: flex;
+  width: 100%;
+  column-gap: 1rem;
 
   h1 {
     flex-grow: 1;
+    overflow: hidden;
   }
 
   a {
@@ -35,6 +38,7 @@
 
   & > p {
     margin: 0;
+    overflow-wrap: break-word;
   }
 
   .username {
